REGRESSION (r94492): Incorrect initial layout of absolutely positioned <input> inside centering div https://bugs.webkit.org/show_bug.cgi?id=77754

Reviewed by David Hyatt.

Source/WebCore:

The correct static position of an center-aligned, inline, absolutely positioned object with a block child can't be known
until the width of the child has been computed. This means that setStaticPositions() in RenderBlockLineLayout is setting
the position too early, before the width of the child has been finalised. To fix, adjust the static position of the inline
positioned object once its child's width has been calculated.

Test: fast/css/align-positioned-object-on-resize.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::layoutPositionedObjects):

LayoutTests:

* fast/css/align-positioned-object-on-resize-expected.txt: Added.
* fast/css/align-positioned-object-on-resize.html: Added.
* platform/qt/Skipped: Skipped on Qt as window.resizeTo() does not work properly in Qt DRT.

Canonical link: https://commits.webkit.org/100905@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113584 268f45cc-cd09-0410-ab3c-d52691b4dbfc